[package]
name = "hifive-test"
version = "0.0.0"
authors = ["John Newby <john@newby.org>"]
edition = "2018"
license = "ISC"
readme = "README.md"

[dependencies]
e310x = "0.6.0"
embedded-hal = "0.2.3"
hifive1 = { path = "./hifive1", features = ["board-hifive1-revb"] }
heapless = "0.5.5"
panic-halt = "0.2.0"
libesp-err-sys = { path = "../libesp-err-sys" }
riscv = "0.5.3"
riscv-rt = "0.6.0"
riscv-rtfm = { path = "../riscv-rtfm" }
riscv-rtfm-macros = { path = "../riscv-rtfm/macros" }
riscv-semihosting = { path = "../riscv-semihosting" }
rtfm-core = "0.2.0"

# this lets you use `cargo fix`!
[[bin]]
name = "hifive-test"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
